// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attack scenarios > big_plains equal 20k tiles each, 1M vs 1M, attack 200k 1`] = `
{
  "attackerLossPerSecond": 3234,
  "attackerLossPerTile": 95.6,
  "attackerTiles": 20000,
  "attackerTroopsLost": 65010,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1537,
  "defenderLossPerTile": 45.44,
  "defenderTiles": 20000,
  "defenderTroopsLost": 30900,
  "finished": true,
  "ticks": 201,
  "tilesConquered": 680,
  "tilesPerSecond": 33.83,
}
`;

exports[`attack scenarios > big_plains equal 20k tiles each, 200k vs 200k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 1961,
  "attackerLossPerTile": 80.16,
  "attackerTiles": 20000,
  "attackerTroopsLost": 40000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 244.6,
  "defenderLossPerTile": 10,
  "defenderTiles": 20000,
  "defenderTroopsLost": 4990,
  "finished": true,
  "ticks": 204,
  "tilesConquered": 499,
  "tilesPerSecond": 24.46,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M troops all-in vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 20590,
  "attackerLossPerTile": 7.117,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 37058,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2663,
  "defenderLossPerTile": 0.9205,
  "defenderTiles": 591663,
  "defenderTroopsLost": 4793,
  "finished": true,
  "ticks": 18,
  "tilesConquered": 5207,
  "tilesPerSecond": 2893,
}
`;

exports[`attack scenarios > giant 1M vs 600k tiles, 8M vs 8M troops, attack 2M 1`] = `
{
  "attackerLossPerSecond": 17950,
  "attackerLossPerTile": 32.74,
  "attackerTiles": 1010406,
  "attackerTroopsLost": 170489,
  "defenderEliminated": false,
  "defenderLossPerSecond": 6559,
  "defenderLossPerTile": 11.97,
  "defenderTiles": 591663,
  "defenderTroopsLost": 62309,
  "finished": true,
  "ticks": 95,
  "tilesConquered": 5207,
  "tilesPerSecond": 548.1,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 4M (10k/tile) 1`] = `
{
  "attackerLossPerSecond": 1994000,
  "attackerLossPerTile": 4111,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 1595051,
  "defenderEliminated": true,
  "defenderLossPerSecond": 3183000,
  "defenderLossPerTile": 6563,
  "defenderTiles": 388,
  "defenderTroopsLost": 2546323,
  "finished": true,
  "ticks": 8,
  "tilesConquered": 388,
  "tilesPerSecond": 485,
}
`;

exports[`attack scenarios > giant 1M-tile attacker, 8M troops, attack 2M vs 400-tile turtle with 400k (1k/tile) 1`] = `
{
  "attackerLossPerSecond": 123700,
  "attackerLossPerTile": 127.6,
  "attackerTiles": 1010018,
  "attackerTroopsLost": 49495,
  "defenderEliminated": true,
  "defenderLossPerSecond": 636600,
  "defenderLossPerTile": 656.3,
  "defenderTiles": 388,
  "defenderTroopsLost": 254629,
  "finished": true,
  "ticks": 4,
  "tilesConquered": 388,
  "tilesPerSecond": 970,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 1M troops all-in vs 1M-tile defender with 1M 1`] = `
{
  "attackerLossPerSecond": 11570,
  "attackerLossPerTile": 25.94,
  "attackerTiles": 388,
  "attackerTroopsLost": 57872,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 50,
  "tilesConquered": 2231,
  "tilesPerSecond": 446.2,
}
`;

exports[`attack scenarios > giant 400-tile attacker, 100k troops, attack 50k vs 1M-tile sparse defender with 1M 1`] = `
{
  "attackerLossPerSecond": 1190,
  "attackerLossPerTile": 53.48,
  "attackerTiles": 388,
  "attackerTroopsLost": 50000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 1010018,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 420,
  "tilesConquered": 935,
  "tilesPerSecond": 22.26,
}
`;

exports[`attack scenarios > giant 600k vs 1M tiles, 1M troops attack 500k vs 8M defender 1`] = `
{
  "attackerLossPerSecond": 6944,
  "attackerLossPerTile": 27.77,
  "attackerTiles": 591663,
  "attackerTroopsLost": 85409,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1515,
  "defenderLossPerTile": 6.058,
  "defenderTiles": 1010406,
  "defenderTroopsLost": 18634,
  "finished": true,
  "ticks": 123,
  "tilesConquered": 3076,
  "tilesPerSecond": 250.1,
}
`;

exports[`attack scenarios > plains 1-troop attack vs 50k defender 1`] = `
{
  "attackerLossPerSecond": 3.333,
  "attackerLossPerTile": 1,
  "attackerTiles": 5000,
  "attackerTroopsLost": 1,
  "defenderEliminated": false,
  "defenderLossPerSecond": 33.33,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 10,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 10M-troop attack vs defender with 1 troop 1`] = `
{
  "attackerLossPerSecond": 3463,
  "attackerLossPerTile": 18.98,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4156,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 219,
  "tilesPerSecond": 182.5,
}
`;

exports[`attack scenarios > plains 50k attack vs defender with 0 troops 1`] = `
{
  "attackerLossPerSecond": 3463,
  "attackerLossPerTile": 18.98,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4156,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 5000,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 219,
  "tilesPerSecond": 182.5,
}
`;

exports[`attack scenarios > plains 100-tile turtle, 1M troops: conquered outright after one tile 1`] = `
{
  "attackerLossPerSecond": 31580,
  "attackerLossPerTile": 63.15,
  "attackerTiles": 9900,
  "attackerTroopsLost": 6315,
  "defenderEliminated": true,
  "defenderLossPerSecond": 50000,
  "defenderLossPerTile": 100,
  "defenderTiles": 100,
  "defenderTroopsLost": 10000,
  "finished": true,
  "ticks": 2,
  "tilesConquered": 100,
  "tilesPerSecond": 500,
}
`;

exports[`attack scenarios > plains 100-troop attack vs 1M defender 1`] = `
{
  "attackerLossPerSecond": 333.3,
  "attackerLossPerTile": 100,
  "attackerTiles": 5000,
  "attackerTroopsLost": 100,
  "defenderEliminated": false,
  "defenderLossPerSecond": 666.7,
  "defenderLossPerTile": 200,
  "defenderTiles": 5000,
  "defenderTroopsLost": 200,
  "finished": true,
  "ticks": 3,
  "tilesConquered": 1,
  "tilesPerSecond": 3.333,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 4M troops (10k/tile) under a defense post, attacked with 1M 1`] = `
{
  "attackerLossPerSecond": 454500,
  "attackerLossPerTile": 31250,
  "attackerTiles": 9600,
  "attackerTroopsLost": 1000000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 145500,
  "defenderLossPerTile": 10000,
  "defenderTiles": 400,
  "defenderTroopsLost": 320000,
  "finished": true,
  "ticks": 22,
  "tilesConquered": 32,
  "tilesPerSecond": 14.55,
}
`;

exports[`attack scenarios > plains 400-tile turtle, 400k troops (1k/tile), attacked with 400k 1`] = `
{
  "attackerLossPerSecond": 49810,
  "attackerLossPerTile": 240,
  "attackerTiles": 9600,
  "attackerTroopsLost": 59768,
  "defenderEliminated": false,
  "defenderLossPerSecond": 180000,
  "defenderLossPerTile": 867.5,
  "defenderTiles": 400,
  "defenderTroopsLost": 216000,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 249,
  "tilesPerSecond": 207.5,
}
`;

exports[`attack scenarios > plains big attacker (9500 tiles) vs small defender (500 tiles) 1`] = `
{
  "attackerLossPerSecond": 2941,
  "attackerLossPerTile": 135.1,
  "attackerTiles": 9500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 2176,
  "defenderLossPerTile": 100,
  "defenderTiles": 500,
  "defenderTroopsLost": 7400,
  "finished": true,
  "ticks": 34,
  "tilesConquered": 74,
  "tilesPerSecond": 21.76,
}
`;

exports[`attack scenarios > plains bot vs human defender 1`] = `
{
  "attackerLossPerSecond": 1724,
  "attackerLossPerTile": 80,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 215.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1250,
  "finished": true,
  "ticks": 58,
  "tilesConquered": 125,
  "tilesPerSecond": 21.55,
}
`;

exports[`attack scenarios > plains bot vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 176.9,
  "attackerLossPerTile": 6.917,
  "attackerTiles": 1000,
  "attackerTroopsLost": 920,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 52,
  "tilesConquered": 133,
  "tilesPerSecond": 25.58,
}
`;

exports[`attack scenarios > plains defender with defense posts covering the whole border 1`] = `
{
  "attackerLossPerSecond": 4000,
  "attackerLossPerTile": 400,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 100,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 250,
  "finished": true,
  "ticks": 25,
  "tilesConquered": 25,
  "tilesPerSecond": 10,
}
`;

exports[`attack scenarios > plains defender with one defense post at the border 1`] = `
{
  "attackerLossPerSecond": 3125,
  "attackerLossPerTile": 166.7,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 187.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 600,
  "finished": true,
  "ticks": 32,
  "tilesConquered": 60,
  "tilesPerSecond": 18.75,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 4630,
  "attackerLossPerTile": 25.37,
  "attackerTiles": 5000,
  "attackerTroopsLost": 5556,
  "defenderEliminated": false,
  "defenderLossPerSecond": 6233,
  "defenderLossPerTile": 34.16,
  "defenderTiles": 5000,
  "defenderTroopsLost": 7480,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 219,
  "tilesPerSecond": 182.5,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 2987,
  "attackerLossPerTile": 84.57,
  "attackerTiles": 5000,
  "attackerTroopsLost": 18520,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1206,
  "defenderLossPerTile": 34.16,
  "defenderTiles": 5000,
  "defenderTroopsLost": 7480,
  "finished": true,
  "ticks": 62,
  "tilesConquered": 219,
  "tilesPerSecond": 35.32,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 6202,
  "attackerLossPerTile": 42.48,
  "attackerTiles": 5000,
  "attackerTroopsLost": 9303,
  "defenderEliminated": false,
  "defenderLossPerSecond": 4987,
  "defenderLossPerTile": 34.16,
  "defenderTiles": 5000,
  "defenderTroopsLost": 7480,
  "finished": true,
  "ticks": 15,
  "tilesConquered": 219,
  "tilesPerSecond": 146,
}
`;

exports[`attack scenarios > plains dense defender (200k on 5k tiles, 40/tile, ~half the no-city cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 6324,
  "attackerLossPerTile": 57.75,
  "attackerTiles": 5000,
  "attackerTroopsLost": 12648,
  "defenderEliminated": false,
  "defenderLossPerSecond": 3740,
  "defenderLossPerTile": 34.16,
  "defenderTiles": 5000,
  "defenderTroopsLost": 7480,
  "finished": true,
  "ticks": 20,
  "tilesConquered": 219,
  "tilesPerSecond": 109.5,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 10k 1`] = `
{
  "attackerLossPerSecond": 1724,
  "attackerLossPerTile": 80,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 215.5,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1250,
  "finished": true,
  "ticks": 58,
  "tilesConquered": 125,
  "tilesPerSecond": 21.55,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 25k 1`] = `
{
  "attackerLossPerSecond": 3663,
  "attackerLossPerTile": 68.58,
  "attackerTiles": 5000,
  "attackerTroopsLost": 15020,
  "defenderEliminated": false,
  "defenderLossPerSecond": 456.1,
  "defenderLossPerTile": 8.539,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1870,
  "finished": true,
  "ticks": 41,
  "tilesConquered": 219,
  "tilesPerSecond": 53.41,
}
`;

exports[`attack scenarios > plains equal 50k vs 50k, attack 50k (all-in) 1`] = `
{
  "attackerLossPerSecond": 5005,
  "attackerLossPerTile": 36.57,
  "attackerTiles": 5000,
  "attackerTroopsLost": 8008,
  "defenderEliminated": false,
  "defenderLossPerSecond": 1169,
  "defenderLossPerTile": 8.539,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1870,
  "finished": true,
  "ticks": 16,
  "tilesConquered": 219,
  "tilesPerSecond": 136.9,
}
`;

exports[`attack scenarios > plains human vs bot defender 1`] = `
{
  "attackerLossPerSecond": 1124,
  "attackerLossPerTile": 56.18,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 200,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1780,
  "finished": true,
  "ticks": 89,
  "tilesConquered": 178,
  "tilesPerSecond": 20,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 2k 1`] = `
{
  "attackerLossPerSecond": 255.6,
  "attackerLossPerTile": 13.83,
  "attackerTiles": 1000,
  "attackerTroopsLost": 1840,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 72,
  "tilesConquered": 133,
  "tilesPerSecond": 18.47,
}
`;

exports[`attack scenarios > plains human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 1227,
  "attackerLossPerTile": 13.83,
  "attackerTiles": 1000,
  "attackerTroopsLost": 1840,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 15,
  "tilesConquered": 133,
  "tilesPerSecond": 88.67,
}
`;

exports[`attack scenarios > plains nation vs bot defender 1`] = `
{
  "attackerLossPerSecond": 1124,
  "attackerLossPerTile": 56.18,
  "attackerTiles": 5000,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 200,
  "defenderLossPerTile": 10,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1780,
  "finished": true,
  "ticks": 89,
  "tilesConquered": 178,
  "tilesPerSecond": 20,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 4k 1`] = `
{
  "attackerLossPerSecond": 930.2,
  "attackerLossPerTile": 97.56,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 381.4,
  "defenderLossPerTile": 40,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1640,
  "finished": true,
  "ticks": 43,
  "tilesConquered": 41,
  "tilesPerSecond": 9.535,
}
`;

exports[`attack scenarios > plains outmatched 20k vs 200k, attack 20k (all-in) 1`] = `
{
  "attackerLossPerSecond": 1781,
  "attackerLossPerTile": 84.57,
  "attackerTiles": 5000,
  "attackerTroopsLost": 18520,
  "defenderEliminated": false,
  "defenderLossPerSecond": 719.2,
  "defenderLossPerTile": 34.16,
  "defenderTiles": 5000,
  "defenderTroopsLost": 7480,
  "finished": true,
  "ticks": 104,
  "tilesConquered": 219,
  "tilesPerSecond": 21.06,
}
`;

exports[`attack scenarios > plains overwhelming 200k vs 20k, attack 40k 1`] = `
{
  "attackerLossPerSecond": 3580,
  "attackerLossPerTile": 19.62,
  "attackerTiles": 5000,
  "attackerTroopsLost": 4296,
  "defenderEliminated": false,
  "defenderLossPerSecond": 623.3,
  "defenderLossPerTile": 3.416,
  "defenderTiles": 5000,
  "defenderTroopsLost": 748,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 219,
  "tilesPerSecond": 182.5,
}
`;

exports[`attack scenarios > plains small attacker (500 tiles) vs big defender (9500 tiles) 1`] = `
{
  "attackerLossPerSecond": 1587,
  "attackerLossPerTile": 76.92,
  "attackerTiles": 500,
  "attackerTroopsLost": 10000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 103.2,
  "defenderLossPerTile": 5,
  "defenderTiles": 9500,
  "defenderTroopsLost": 650,
  "finished": true,
  "ticks": 63,
  "tilesConquered": 130,
  "tilesPerSecond": 20.63,
}
`;

exports[`attack scenarios > plains traitor defender 1`] = `
{
  "attackerLossPerSecond": 1073,
  "attackerLossPerTile": 34.29,
  "attackerTiles": 5000,
  "attackerTroopsLost": 7510,
  "defenderEliminated": false,
  "defenderLossPerSecond": 267.1,
  "defenderLossPerTile": 8.539,
  "defenderTiles": 5000,
  "defenderTroopsLost": 1870,
  "finished": true,
  "ticks": 70,
  "tilesConquered": 219,
  "tilesPerSecond": 31.29,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1.67x their army 1`] = `
{
  "attackerLossPerSecond": 7256,
  "attackerLossPerTile": 39.76,
  "attackerTiles": 5000,
  "attackerTroopsLost": 8707,
  "defenderEliminated": false,
  "defenderLossPerSecond": 20260,
  "defenderLossPerTile": 111,
  "defenderTiles": 5000,
  "defenderTroopsLost": 24310,
  "finished": true,
  "ticks": 12,
  "tilesConquered": 219,
  "tilesPerSecond": 182.5,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1/4 their army 1`] = `
{
  "attackerLossPerSecond": 5476,
  "attackerLossPerTile": 132.5,
  "attackerTiles": 5000,
  "attackerTroopsLost": 29022,
  "defenderEliminated": false,
  "defenderLossPerSecond": 4587,
  "defenderLossPerTile": 111,
  "defenderTiles": 5000,
  "defenderTroopsLost": 24310,
  "finished": true,
  "ticks": 53,
  "tilesConquered": 219,
  "tilesPerSecond": 41.32,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 1x their army 1`] = `
{
  "attackerLossPerSecond": 9600,
  "attackerLossPerTile": 65.75,
  "attackerTiles": 5000,
  "attackerTroopsLost": 14400,
  "defenderEliminated": false,
  "defenderLossPerSecond": 16210,
  "defenderLossPerTile": 111,
  "defenderTiles": 5000,
  "defenderTroopsLost": 24310,
  "finished": true,
  "ticks": 15,
  "tilesConquered": 219,
  "tilesPerSecond": 146,
}
`;

exports[`attack scenarios > plains very dense defender (650k on 5k tiles, 130/tile, ~1 city over cap), stack 3/4 their army 1`] = `
{
  "attackerLossPerSecond": 10200,
  "attackerLossPerTile": 88.45,
  "attackerTiles": 5000,
  "attackerTroopsLost": 19371,
  "defenderEliminated": false,
  "defenderLossPerSecond": 12790,
  "defenderLossPerTile": 111,
  "defenderTiles": 5000,
  "defenderTroopsLost": 24310,
  "finished": true,
  "ticks": 19,
  "tilesConquered": 219,
  "tilesPerSecond": 115.3,
}
`;

exports[`attack scenarios > world highland/mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 2198,
  "attackerLossPerTile": 123.5,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 356,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3240,
  "finished": true,
  "ticks": 91,
  "tilesConquered": 162,
  "tilesPerSecond": 17.8,
}
`;

exports[`attack scenarios > world huge empires (~150k tiles each), 2M vs 2M, attack 400k 1`] = `
{
  "attackerLossPerSecond": 4628,
  "attackerLossPerTile": 63.56,
  "attackerTiles": 108968,
  "attackerTroopsLost": 85613,
  "defenderEliminated": false,
  "defenderLossPerSecond": 918.5,
  "defenderLossPerTile": 12.61,
  "defenderTiles": 121741,
  "defenderTroopsLost": 16992,
  "finished": true,
  "ticks": 185,
  "tilesConquered": 1347,
  "tilesPerSecond": 72.81,
}
`;

exports[`attack scenarios > world mountain region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4545,
  "attackerLossPerTile": 122.7,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 740.9,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 3260,
  "finished": true,
  "ticks": 44,
  "tilesConquered": 163,
  "tilesPerSecond": 37.05,
}
`;

exports[`attack scenarios > world mountain region, human vs terra nullius, attack 20k 1`] = `
{
  "attackerLossPerSecond": 1835,
  "attackerLossPerTile": 21.07,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 0,
  "defenderLossPerTile": 0,
  "defenderTiles": 0,
  "defenderTroopsLost": 0,
  "finished": true,
  "ticks": 109,
  "tilesConquered": 949,
  "tilesPerSecond": 87.06,
}
`;

exports[`attack scenarios > world plains-ish region, 100k vs 100k, attack 20k 1`] = `
{
  "attackerLossPerSecond": 4444,
  "attackerLossPerTile": 93.02,
  "attackerTiles": 5000,
  "attackerTroopsLost": 20000,
  "defenderEliminated": false,
  "defenderLossPerSecond": 955.6,
  "defenderLossPerTile": 20,
  "defenderTiles": 5000,
  "defenderTroopsLost": 4300,
  "finished": true,
  "ticks": 45,
  "tilesConquered": 215,
  "tilesPerSecond": 47.78,
}
`;
